# Codam-Core

Milestone_2/A-maze-ing/: .gitignore  LICENSE.md  Makefile  Project_Notes.md  Project_Research.md  README.md  a_maze_ing.py  config.txt  pyproject.toml  requirements.txt
Milestone_2/A-maze-ing/frontend/: config_parser.py  window_class.py  windows_config.py
Milestone_2/A-maze-ing/frontend/tui_logic/: maze_display.py  maze_loop.py
Milestone_2/A-maze-ing/src/: __init__.py  config_parser.py  pyproject.toml  utils.py
Milestone_2/A-maze-ing/src/maze/: cell.py  maze.py  maze_gen.py
Milestone_2/A-maze-ing/src/maze_logic/: builder.py  cell.py  cell_class.py  dir.py  dir_class.py  maze.py  maze_class.py  maze_display.py
Milestone_2/A-maze-ing/src/maze_logic/classes/: __init__.py  cell_class.py  maze_class.py  pixel_class.py
Milestone_2/A-maze-ing/src/maze_logic/gen_algorithms/: __init__.py  base.py  dfs.py  kruskal.py  maze_gen.py
Milestone_2/A-maze-ing/src/maze_logic/generators/: base.py  dfs.py  kruskal.py
Milestone_2/A-maze-ing/src/maze_logic/solve_algorithms/: base.py  maze_solve.py  perfect.py
Milestone_2/A-maze-ing/src/mazegen/: __init__.py  generator.py
Milestone_2/A-maze-ing/test/: curses-test.py  maze_display.py  test.py  test_carlos.py  test_martin.py
Milestone_2/A-maze-ing/ui/: __init__.py  menu.py  state.py  state_class.py  states.py  tui.py  window.py  window_class.py  windows_config.py
Milestone_2/A-maze-ing/ui/tui/: __init__.py  game_loop.py  input.py  input_handler.py  maze_loop.py  menu.py  state_loop.py  states.py  windows_config.py  windows_setup.py
Milestone_2/A-maze-ing/ui/tui_logic/: maze_loop.py  state_loop.py
Milestone_2/Python_Modules/Python_08/ex1/: loading.py  pyproject.toml
(+454 files in other folders)
