[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = 'mazegen'
version = '0.0.1'
description = "A configurable Python maze generator with perfect-maze and visual rendering support."
authors = [
    {name = "Martin", email = "masanz-s@student.codam.nl"},
    {name = "Carlos", email = "cpfister@student.codam.nl"}
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ['.']